kubernetes/apps/default/firefoxsync/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: firefoxsync
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: firefoxsync
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: oauth.accounts.firefox.com
